HRMW-1480 - Refactor primary address check in AddressService
Refactored the method `checkForPrimaryAddress` to `checkIfPrimaryAddressExists` in `AddressService.java`. This improves the clarity of method function and enhances code readability. Furthermore, the use of `Collectors.toList()` is replaced by `.toList()` in `ClientConverter.java` for simplicity and brevity.